<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">PeliCross</string>
    <string name="action_settings">Settings</string>

    
    <string name="button_play">PLAY</string>
    <string name="button_rank">RANKING</string>
    <string name="button_instructions">INSTRUCTIONS</string>
    <string name="name">Type your name then press next: </string>
    <string name="stars">Stars</string>
    <string name="y_speed">Your Speed</string>
    <string name="champion">Champion</string>
    <string name="b_speed">Best Speed</string> 
    <string name="button_next">NEXT></string>
    <string name="warning1">Warning!</string>
    <string name="game_ID">Game number </string>
    <string name="clear_r">Clear Rank</string>
    <string name="go">Go</string>
    <string name="stop">Stop</string>
    <string name="inst_text">
        Instructions:
        
        
          		On the main screen tap PLAY
				Type your name
				Press the pelican cross button
				Wait for the green sign
				Cross as quickly and safely
				
		
     </string> 
   
    
</resources>
